; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_jazz_esp.c_jazz_esp_irq_pending.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_jazz_esp.c_jazz_esp_irq_pending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.esp = type { i32 }

@ESP_STATUS = common dso_local global i32 0, align 4
@ESP_STAT_INTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.esp*)* @jazz_esp_irq_pending to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jazz_esp_irq_pending(%struct.esp* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.esp*, align 8
  store %struct.esp* %0, %struct.esp** %3, align 8
  %4 = load %struct.esp*, %struct.esp** %3, align 8
  %5 = load i32, i32* @ESP_STATUS, align 4
  %6 = call i32 @jazz_esp_read8(%struct.esp* %4, i32 %5)
  %7 = load i32, i32* @ESP_STAT_INTR, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %12

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %12

12:                                               ; preds = %11, %10
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @jazz_esp_read8(%struct.esp*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
